CXF-448: Resolve imported xsd using a path relative to WSDL path which is defined in servlet config file.
git-svn-id: https://svn.apache.org/repos/asf/incubator/cxf/trunk@517508 13f79535-47bb-0310-9956-ffa450edef68